add mo tests + javadoc